# c-game-experiment

./: .clang-format  .editorconfig  .gitignore  LICENSE  README.md  build-unix.sh  build-windows.bat  conanfile.txt  meson.build
src/: main.c  nuklear_sdl_renderer.h
test/: test_1.c
